src/main/webapp/assets/styles/nu/mine/mosher/genealogy/layout.css
/* columnar lists */
.cn {
    column-width: 12em;
}



/* grid styles for two-column layout */
.c2-wrap {
    display: grid;
}

.c2-left {
    grid-column: 1;
    text-align: left;
}

.c2-right {
    grid-column: 2;
    text-align: right;
}

.layout-indent {
    margin-left: 2em;
}

.layout-right {
    float: right;
}

